--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,7 @@
 
 .home {
     width: 100%;
-    /height: 100vh;/
+    /*height: 100vh;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,7 +71,7 @@ nav h2 {
 
 .body {
     width: 100%;
-    height: 93vh;
+    height: auto;
     background-image: url(../images/background.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -82,9 +82,9 @@ nav h2 {
 }
 
 .center-body {
-    height: 89%;
+    height: auto;
     background: white;
-    width: 91%;
+    width: 92%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,15 +114,15 @@ nav h2 {
 
 .job-options {
     background: transparent;
-    width: 100%;
-    height: 87%;
+    width: auto;
+    height: 93vh;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
 
 .options-buttons {
-    width: 44%;
+    width: auto;
     height: 80%;
     background-color: transparent;
     display: grid;
@@ -133,7 +133,7 @@ nav h2 {
 
 .options-buttons h2 {
     grid-column: 1/12;
-    font-size: 2.5rem;
+    font-size: auto;
     color: #7e027e;
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -187,14 +187,20 @@ nav h2 {
     background-color: var(--main-color) !important;
     color: white !important;
 }
-/SECOND SECTION CSS/
+
+
+/*SECOND SECTION CSS*/
 
 .second-section {
     width: 95%;
-    height: 50vh;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+.second-section img {
+    min-height: 80%;
 }
 
 .left-side {
@@ -208,7 +214,7 @@ nav h2 {
 }
 
 .left-side h2 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     color: var(--main-color);
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -249,9 +255,12 @@ nav h2 {
     font-weight: bold !important;
 }
 
+
+/*THIRD SECTION CSS*/
+
 .third-section {
     width: 100%;
-    height: 50vh;
+    height: auto;
     background-image: url(../images/background.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -262,6 +271,7 @@ nav h2 {
 }
 
 .main-third {
+    margin: 20px 0px;
     width: 94%;
     height: 93%;
     background-color: white;
@@ -296,9 +306,13 @@ nav h2 {
     font-weight: 500;
 }
 
+.container-fluid {
+    text-align: center;
+}
+
 .four-section {
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: white;
     color: var(--main-color);
 }
@@ -312,6 +326,11 @@ nav h2 {
     font-size: 3.00rem;
     font-weight: 500;
     text-align: center;
+}
+
+.card {
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
 }
 
 .row-1 {
@@ -337,7 +356,7 @@ nav h2 {
 }
 
 footer {
-    height: 20vh;
+    height: auto;
     width: 100%;
     background-color: var(--main-color);
     display: flex !important;
@@ -358,6 +377,8 @@ footer {
     align-items: center;
     justify-content: space-evenly;
 }
+
+
 /*RESPONSIVE*/
 
 @media (max-width: 1252px) {
@@ -402,6 +423,10 @@ footer {
         justify-content: center;
         flex-wrap: wrap;
     }
+    .second-section img {
+        height: 50%;
+        width: 56%;
+    }
     .left-side {
         align-items: center;
     }
@@ -415,8 +440,8 @@ footer {
         width: 33% !important;
     }
     .job-options img {
-        width: 23em;
-        height: 28em;
+        width: 19em;
+        height: 26em;
     }
 }
 
@@ -431,6 +456,7 @@ footer {
     .job-options {
         flex-direction: column-reverse;
         margin: 30px 0px;
+        height: auto !important;
     }
     .center-body {
         height: auto;
@@ -456,7 +482,7 @@ footer {
     }
 }
 
-@media (max-width: 594px) {
+@media (max-width: 596px) {
     .row-1 {
         display: flex !important;
         width: 100%;
